# smolagents-crew

./: .gitignore  LICENSE  README.md  build_proto.py  pyproject.toml
examples/: distributed_research_writer_crew.py  distributed_swarm_example.py  research_writer_example.py  swarm_example.ipynb  swarm_example.py  verification_helper.py
smolagents_crew/: __init__.py  builder.py  core.py
smolagents_crew/swarm/: __init__.py  client.py  crew.py  debug.py  diagnostics.py  manager.py  node.py  server.py
smolagents_crew/swarm/proto/: __init__.py  swarm.proto  swarm_pb2.py  swarm_pb2_grpc.py
smolagents_crew/utils/: __init__.py  evaluation.py  template_parser.py  validation.py
tests/: test_builder.py  test_core.py
