[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smolagents-crew"
dynamic = ["version"]
description = "A powerful framework for orchestrating multiple AI agents to work together efficiently"
authors = [{name = "Carlos André Antunes"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "smolagents"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/antunsz/smolagents-crew"

[project.scripts]
smolagents = "smolagents_crew.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["smolagents_crew"]

[tool.hatch.version]
source = "vcs"